<resources>
    <string name="app_name">Black Box</string>
    <string name="developer">by Edvard Grei</string>


    <string name="menu_internet_off">Oh, Nooooo!\nNo Internet Connection</string>
    <string name="menu_internet_on">YES!\nInternet is Back Now</string>

    <string name="button_play_with_me">Play with me</string>
    <string name="button_go_back">Go Back</string>
    <string name="button_next_level">Next Level</string>

    <string name="play_answer_hint">\?</string>
    <string name="play_calculate_for_me">Calculate for me all the squares</string>
    <string name="play_level">Level - </string>
    <string name="play_correct_answer">Perfect ;)</string>
    <string name="play_incorrect_answer">Incorrect</string>
    <string name="play_thank_you">thank you</string>

</resources>