<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.play.PlayFragment">


    <ImageView
        android:id="@+id/play_image_wifi"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_wifi_signal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/play_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/play_image_emotion"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_waiting"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/brandBlueLight"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/play_editText_answer"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/fredoka_one_regular"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/play_answer_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/play_text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/fredoka_one_regular"
        android:text="@string/play_calculate_for_me"
        android:textColor="@color/brandBlueDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_linearLayout" />

    <TextView
        android:id="@+id/play_text_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/fredoka_one_regular"
        android:text="@string/play_level"
        android:textColor="@color/brandBlueDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_text_info" />

    <ImageView
        android:id="@+id/play_image_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/level_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_text_level"
        app:srcCompat="@drawable/level_8"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/play_text_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/play_incorrect_answer"
        android:fontFamily="@font/fredoka_one_regular"
        android:textColor="@color/brandBlueLight"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_image_level" />

    <Button
        android:id="@+id/play_button_next_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one_regular"
        android:text="@string/button_next_level"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_text_check" />


</androidx.constraintlayout.widget.ConstraintLayout>